# python-payment-system-clone

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  python.py
payments/: models.py
project/: settings.py  urls.py
project/payments/api/: router.py
project/payments/api/v1/: router.py
project/payments/api/v1/endpoints/: orders.py
project/payments/core/: permissions.py
project/payments/models/: charge_line.py  delivery.py  line_item.py  line_item_option.py  order.py  order_memo.py  order_pay_method.py  order_status_history.py  seller_summary.py  user.py
project/payments/schemas/: order.py
project/payments/serializers/: charge_line.py  delivery.py  line_item.py  line_item_option.py  order.py  order_memo.py  order_pay_method.py  order_status_history.py  seller_summary.py
project/payments/services/: order_service.py  shard_key_lookup_determine_service.py  shard_lookup_key_determine_service.py
project/payments/utils/: database_route.py  hash_function.py  mongodb_manager.py  sharding_context_holder.py  sharding_data_source.py  sharding_router.py  sharding_target_decorator.py  try_except_decorator.py
tests/: test_data.py
tests/utils/: test_mongodb_manager.py  test_sharding_context_holder.py  test_sharding_router.py  test_sharding_target_decorator.py  test_try_except_decorator.py
